Move tag autocomplete overflow-x fix to base styles for light+dark mode

--- a/media/css/reader/darkmode.css
+++ b/media/css/reader/darkmode.css
@@ -2405,7 +2405,6 @@ color: #fff;
     border-radius: 4px;
     background-color: #303739;
     color: #c0c0c0;
-    overflow-x: hidden;
 }
 
 /* Tag window when saving story. Input box suggestions (2 of 3) */
